--- a/index.html
+++ b/index.html
@@ -12,7 +12,54 @@
 </head>
 
 <body>
+  <div class="bg-header">
+    <header class="container">
+      <div class="content-header">
+        <img src="./assets/Avatar.png" alt="Imagem da Martina Santos">
+        <h2>
+          Hello World! Meu nome é <span>Martina Santos</span> e sou
+        </h2>
+        <h1>
+          Desenvolvedora Fullstack
+        </h1>
+        <p>
+          Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
+        </p>
+      </div>
 
+      <div class="tags">
+        <div class="tag-item">
+          <img src="assets/icons/GitHub.svg" alt="Logo da Github">
+          <span>GitHub</span>
+        </div>
+
+        <div class="tag-item">
+          <img src="assets/icons/HTML.svg" alt="Logo HTML">
+          <span>HTML</span>
+        </div>
+
+        <div class="tag-item">
+          <img src="assets/icons/css.svg" alt="Logo css">
+          <span>CSS</span>
+        </div>
+
+        <div class="tag-item">
+          <img src="assets/icons/JavaScript.svg" alt="Logo javascript">
+          <span>Javascript</span>
+        </div>
+
+        <div class="tag-item">
+          <img src="assets/icons/React.svg" alt="Logo react">
+          <span>React</span>
+        </div>
+
+        <div class="tag-item">
+          <img src="assets/icons/Node.js.svg" alt="Logo node">
+          <span>Node.js</span>
+        </div>
+      </div>
+    </header>
+  </div>
 </body>
 
 </html>
