Feito a parte css do header e troca dos icones das tags no HTML

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
   <div class="bg-header">
     <header class="container">
-      <div class="content-header">
+      <div class="header-info">
         <img src="./assets/Avatar.png" alt="Imagem da Martina Santos">
-        <h2>
+        <h2 class="subtitle">
           Hello World! Meu nome é <span>Martina Santos</span> e sou
         </h2>
-        <h1>
+        <h1 class="text-lg">
           Desenvolvedora Fullstack
         </h1>
         <p>
@@ -29,36 +29,42 @@
 
       <div class="tags">
         <div class="tag-item">
-          <img src="assets/icons/GitHub.svg" alt="Logo da Github">
-          <span>GitHub</span>
+          <img src="assets/icons/GitHub-color.svg" alt="Logo da Github">
+          <span class="text-md">GitHub</span>
         </div>
 
         <div class="tag-item">
-          <img src="assets/icons/HTML.svg" alt="Logo HTML">
-          <span>HTML</span>
+          <img src="assets/icons/HTML-COLOR.svg" alt="Logo html">
+          <span class="text-md">HTML</span>
         </div>
 
         <div class="tag-item">
-          <img src="assets/icons/css.svg" alt="Logo css">
-          <span>CSS</span>
+          <img src="assets/icons/css-color.svg" alt="Logo css">
+          <span class="text-md">GitHub</span>
         </div>
 
         <div class="tag-item">
-          <img src="assets/icons/JavaScript.svg" alt="Logo javascript">
-          <span>Javascript</span>
+          <img src="assets/icons/JavaScript-color.svg" alt="Logo javascript">
+          <span class="text-md">Javascript</span>
         </div>
 
         <div class="tag-item">
-          <img src="assets/icons/React.svg" alt="Logo react">
-          <span>React</span>
+          <img src="assets/icons/React-color.svg" alt="Logo react">
+          <span class="text-md">React</span>
         </div>
 
         <div class="tag-item">
-          <img src="assets/icons/Node.js.svg" alt="Logo node">
-          <span>Node.js</span>
+          <img src="assets/icons/Node.js-color.svg" alt="Logo node.js">
+          <span class="text-md">Node.js</span>
         </div>
       </div>
     </header>
+
+    <nav class="arrowDown">
+      <a href="#">
+        <img src="assets/icons/CaretDoubleDown.svg" alt="">
+      </a>
+    </nav>
   </div>
 </body>
 
