--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <header class="container">
       <div class="header-info">
         <img src="./assets/Avatar.png" alt="Imagem da Martina Santos">
-        <h2 class="subtitle">
+        <h3 class="subtitle">
           Hello World! Meu nome é <span>Martina Santos</span> e sou
-        </h2>
+        </h3>
         <h1 class="text-lg">
           Desenvolvedora Fullstack
         </h1>
@@ -66,6 +66,67 @@
       </a>
     </nav>
   </div>
+
+  <main>
+    <section id="projects" class="container">
+      <header>
+        <h3 class="subtitle">Meu trabalho</h3>
+        <h2>Veja os projetos em destaque</h2>
+      </header>
+
+      <div class="projects-lits">
+        <figure class="card">
+          <img src=".//assets/images/Thumbnail_Project-01.png" alt="Imagem do projeto Travelgram Rede social onde as pessoas mostram os registros de suas viagens pelo mundo">
+          <figcaption>
+            <span>Travelgram</span>
+            <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src=".//assets/images/Thumbnail_Project-02.png" alt="Imagem do projeto Tech News, homepage de um portal de notícias sobre a área de tecnologia">
+          <figcaption>
+            <span>Tech News</span>
+            <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src=".//assets/images/Thumbnail_Project-03.png" alt="Imagem do projeto de página de receita, com o passo a passo de uma receita para cupcakes">
+          <figcaption>
+            <span>Página de receita</span>
+            <p>Página com o passo a passo de uma receita para cupcakes</p>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src=".//assets/images/Thumbnail_Project-04.png" alt="Landing Page completa e responsiva de um aplicativo de Karaokê">
+          <figcaption>
+            <span>Zingen</span>
+            <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src=".//assets/images/Thumbnail_Project-05.png" alt="Imagem do projeto Refund, Um sistema para pedido e acompanhamento de reembolso ">
+          <figcaption>
+            <span>Refund</span>
+            <p>Um sistema para pedido e acompanhamento de reembolso </p>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src=".//assets/images/Thumbnail_Project-01.png" alt="">
+          <figcaption>
+            <span>Página de turismo</span>
+            <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
+  </main>
+
+
 </body>
 
 </html>
