Finalizado a seção Projects

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
     <section id="projects" class="container">
       <header>
         <h3 class="subtitle">Meu trabalho</h3>
-        <h2>Veja os projetos em destaque</h2>
+        <h2 class="title-md">Veja os projetos em destaque</h2>
       </header>
 
-      <div class="projects-lits">
+      <div class="projects-list">
         <figure class="card">
           <img src=".//assets/images/Thumbnail_Project-01.png" alt="Imagem do projeto Travelgram Rede social onde as pessoas mostram os registros de suas viagens pelo mundo">
           <figcaption>
-            <span>Travelgram</span>
+            <span class="title-sm">Travelgram</span>
             <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
           </figcaption>
         </figure>
@@ -86,7 +86,7 @@
         <figure class="card">
           <img src=".//assets/images/Thumbnail_Project-02.png" alt="Imagem do projeto Tech News, homepage de um portal de notícias sobre a área de tecnologia">
           <figcaption>
-            <span>Tech News</span>
+            <span class="title-sm">Tech News</span>
             <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
           </figcaption>
         </figure>
@@ -94,7 +94,7 @@
         <figure class="card">
           <img src=".//assets/images/Thumbnail_Project-03.png" alt="Imagem do projeto de página de receita, com o passo a passo de uma receita para cupcakes">
           <figcaption>
-            <span>Página de receita</span>
+            <span class="title-sm">Página de receita</span>
             <p>Página com o passo a passo de uma receita para cupcakes</p>
           </figcaption>
         </figure>
@@ -102,7 +102,7 @@
         <figure class="card">
           <img src=".//assets/images/Thumbnail_Project-04.png" alt="Landing Page completa e responsiva de um aplicativo de Karaokê">
           <figcaption>
-            <span>Zingen</span>
+            <span class="title-sm">Zingen</span>
             <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
           </figcaption>
         </figure>
@@ -110,7 +110,7 @@
         <figure class="card">
           <img src=".//assets/images/Thumbnail_Project-05.png" alt="Imagem do projeto Refund, Um sistema para pedido e acompanhamento de reembolso ">
           <figcaption>
-            <span>Refund</span>
+            <span class="title-sm">Refund</span>
             <p>Um sistema para pedido e acompanhamento de reembolso </p>
           </figcaption>
         </figure>
@@ -118,12 +118,13 @@
         <figure class="card">
           <img src=".//assets/images/Thumbnail_Project-01.png" alt="">
           <figcaption>
-            <span>Página de turismo</span>
+            <span class="title-sm">Página de turismo</span>
             <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
           </figcaption>
         </figure>
       </div>
     </section>
+
   </main>
 
 
