Feito a estrutura HTML da seção serviços

--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
 
     <nav class="arrowDown">
       <a href="#">
-        <img src="assets/icons/CaretDoubleDown.svg" alt="">
+        <img src="assets/icons/CaretDoubleDown.svg" alt="ícone para rolar para próxima seção">
       </a>
     </nav>
   </div>
 
   <main>
     <section id="projects" class="container">
-      <header>
+      <div class="title-info">
         <h3 class="subtitle">Meu trabalho</h3>
         <h2 class="title-md">Veja os projetos em destaque</h2>
-      </header>
+      </div>
 
       <div class="projects-list">
         <figure class="card">
-          <img src=".//assets/images/Thumbnail_Project-01.png" alt="Imagem do projeto Travelgram Rede social onde as pessoas mostram os registros de suas viagens pelo mundo">
+          <img src="./assets/images/Thumbnail_Project-01.png" alt="Imagem do projeto Travelgram Rede social onde as pessoas mostram os registros de suas viagens pelo mundo">
           <figcaption>
             <span class="title-sm">Travelgram</span>
             <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
@@ -84,7 +84,7 @@
         </figure>
 
         <figure class="card">
-          <img src=".//assets/images/Thumbnail_Project-02.png" alt="Imagem do projeto Tech News, homepage de um portal de notícias sobre a área de tecnologia">
+          <img src="./assets/images/Thumbnail_Project-02.png" alt="Imagem do projeto Tech News, homepage de um portal de notícias sobre a área de tecnologia">
           <figcaption>
             <span class="title-sm">Tech News</span>
             <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
@@ -92,7 +92,7 @@
         </figure>
 
         <figure class="card">
-          <img src=".//assets/images/Thumbnail_Project-03.png" alt="Imagem do projeto de página de receita, com o passo a passo de uma receita para cupcakes">
+          <img src="./assets/images/Thumbnail_Project-03.png" alt="Imagem do projeto de página de receita, com o passo a passo de uma receita para cupcakes">
           <figcaption>
             <span class="title-sm">Página de receita</span>
             <p>Página com o passo a passo de uma receita para cupcakes</p>
@@ -100,7 +100,7 @@
         </figure>
 
         <figure class="card">
-          <img src=".//assets/images/Thumbnail_Project-04.png" alt="Landing Page completa e responsiva de um aplicativo de Karaokê">
+          <img src="./assets/images/Thumbnail_Project-04.png" alt="Landing Page completa e responsiva de um aplicativo de Karaokê">
           <figcaption>
             <span class="title-sm">Zingen</span>
             <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
@@ -108,7 +108,7 @@
         </figure>
 
         <figure class="card">
-          <img src=".//assets/images/Thumbnail_Project-05.png" alt="Imagem do projeto Refund, Um sistema para pedido e acompanhamento de reembolso ">
+          <img src="./assets/images/Thumbnail_Project-05.png" alt="Imagem do projeto Refund, Um sistema para pedido e acompanhamento de reembolso ">
           <figcaption>
             <span class="title-sm">Refund</span>
             <p>Um sistema para pedido e acompanhamento de reembolso </p>
@@ -116,7 +116,7 @@
         </figure>
 
         <figure class="card">
-          <img src=".//assets/images/Thumbnail_Project-01.png" alt="">
+          <img src="./assets/images/Thumbnail_Project-01.png" alt="">
           <figcaption>
             <span class="title-sm">Página de turismo</span>
             <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
@@ -124,6 +124,35 @@
         </figure>
       </div>
     </section>
+
+    <div class="bg-services">
+      <section id="services" class="container">
+        <article class="title-info">
+          <h3 class="subtitle">Meus serviços</h3>
+          <h2 class="title-md">Como posso ajudar o seu negócio</h2>
+        </article>
+
+        <div class="services-list">
+          <article class="service-item">
+            <img src="./assets/icons/Devices.svg" alt="ícone de um desktop e um celular">
+            <span class="title-sm">Websites e Aplicativos</span>
+            <p>Desenvolvimento de interfaces</p>
+          </article>
+
+          <article class="service-item">
+            <img src="./assets/icons/HardDrives.svg" alt="ícone de um servidor de banco de dados">
+            <span class="title-sm">API e banco de dados</span>
+            <p>Criação de serviços do sistema </p>
+          </article>
+
+          <article class="service-item">
+            <img src="./assets/icons/Infinity.svg" alt="ícone do infinito">
+            <span class="title-sm">DevOps</span>
+            <p>Gestão e infraestrutura da aplicação</p>
+          </article>
+        </div>
+      </section>
+    </div>
 
   </main>
 
