--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 
     <div class="bg-services">
       <section id="services" class="container">
-        <article class="title-info">
+        <div class="title-info">
           <h3 class="subtitle">Meus serviços</h3>
           <h2 class="title-md">Como posso ajudar o seu negócio</h2>
-        </article>
+        </div>
 
         <div class="services-list">
           <article class="service-item">
