Ajuste feito no arrowDown adicionando o redirecionamento para a seção seguinte

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
 
     <nav class="arrowDown">
-      <a href="#">
+      <a href="#projects">
         <img src="assets/icons/CaretDoubleDown.svg" alt="ícone para rolar para próxima seção">
       </a>
     </nav>
