--- a/index.html
+++ b/index.html
@@ -154,6 +154,37 @@
       </section>
     </div>
 
+    <div class="bg-contact">
+      <section class="container">
+        <div class="title-info">
+          <h3 class="subtitle">Contato</h3>
+          <h2 class="title-md">Gostou do meu trabalho?</h2>
+          <p class="text-md">Entre em contato ou acompanhe as minhas redes sociais!</p>
+        </div>
+
+        <nav>
+          <a href="#">
+            <img src="./assets/icons/LinkedinLogo.svg" alt="Logo da empresa linkedin">
+            <span>Linkedin</span>
+          </a>
+
+          <a href="#">
+            <img src="./assets/icons/InstagramLogo.svg" alt="Logo da empresa Instagram">
+            <span>Instagram</span>
+          </a>
+
+          <a href="#">
+            <img src="./assets/icons/GithubLogo.svg" alt="Logo da empresa Github">
+            <span>GitHub</span>
+          </a>
+
+          <a href="#">
+            <img src="./assets/icons/EnvelopeSimple.svg" alt="ícone de um envelope">
+            <span>E-mail</span>
+          </a>
+        </nav>
+      </section>
+    </div>
   </main>
 
 
