Finalizado a parte CSS da seção contact e finalizado o projeto.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="tag-item">
           <img src="assets/icons/css-color.svg" alt="Logo css">
-          <span class="text-md">GitHub</span>
+          <span class="text-md">CSS</span>
         </div>
 
         <div class="tag-item">
@@ -155,7 +155,7 @@
     </div>
 
     <div class="bg-contact">
-      <section class="container">
+      <section id="contact" class="container">
         <div class="title-info">
           <h3 class="subtitle">Contato</h3>
           <h2 class="title-md">Gostou do meu trabalho?</h2>
